# edge-connect

./: pyproject.toml
checkpoints/lehigh/: config.yml  lehigh.flist  lehigh_masks.flist  lh_test.flist  lh_train.flist  lh_val.flist  lhm_test.flist  lhm_train.flist  lhm_val.flist
scripts/: flist_spliter.py
src/: dataset.py  edge_connect.py  loss.py
