[tool.poetry]
name = "edge-connect"
version = "0.1.0"
description = ""
authors = ["knazeri"]
license = "Creative Commons"
readme = "README.md"
packages = [{include = "edge_connect"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.12 "
numpy = "^1.24.1"
scipy = "^1.10.0"
future = "^0.18.3"
matplotlib = "^3.6.3"
pillow = "^9.4.0"
opencv-python = "^4.7.0.68"
scikit-image = "^0.19.3"
pyaml = "^21.10.1"
torch = "^1.13.1"
torchvision = "^0.14.1"
imageio = "^2.25.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
